--- a/projects/kit/.eslintrc.json
+++ b/projects/kit/.eslintrc.json
@@ -6,6 +6,8 @@
             "files": ["*.ts"],
             "rules": {
                 "@typescript-eslint/no-inferrable-types": "off",
+                "@typescript-eslint/no-empty-function": "off",
+                "@typescript-eslint/no-explicit-any": "off",
                 "@angular-eslint/no-output-on-prefix": "off",
                 "@angular-eslint/directive-selector": [
                     "error",
