--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,6 @@
-name: Publish package to NPM
+name: Publish package
 on:
-    release:
-        types: [published]
+    workflow_dispatch:
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -15,6 +14,8 @@ jobs:
                   registry-url: 'https://registry.npmjs.org'
             - name: Install dependencies 🔧
               run: npm ci
+            - name: Version 🏷️
+              run: cd projects/kit && npm version ${{ github.event.inputs.version }}
             - name: Build 🏗️
               run: npm run build:prod
             - name: Publish 🚀
